<resources>
    <string name="app_name">Tuber</string>
    <string name="twice_baked_potato">Twice Baked Potato</string>
    <string name="twice_baked_potato_price">$4.99</string>
    <string name="twice_baked_potato_description">Tap to order our special potato of the day.
    It\'s delivered piping hot, straight to your door in 30 minutes or less.</string>
    <string name="our_menu">Our Menu</string>

    <string name="fingerprint_hardware_present">Fingerprint Hardware Present</string>
    <string name="fingerprint_hardware_not_present">Fingerprint Hardware Not Present</string>
    <string name="fingerprint_enrolled">Fingerprint(s) Enrolled</string>
    <string name="fingerprint_not_enrolled">No Fingerprint(s) Enrolled, Please Go Do That</string>

    <string name="register_fingerprint">Register</string>
    <string name="authenticate_fingerprint">Authenticate</string>


    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized</string>

    <string name="make_a_purchase">Make a Purchase</string>

    <string name="fingerprint_success">Success!</string>
</resources>
